set color not required.

--- a/ganttchart/html/config.html
+++ b/ganttchart/html/config.html
@@ -70,9 +70,9 @@
             </div>
             <div class="kintoneplugin-field-description">{{html:terms.ganttchartToDescription}}</div>
         </div>
-        <!-- Colour -->
+        <!-- Color -->
         <div class="kintoneplugin-row">
-            <div class="kintoneplugin-label">{{html:terms.ganttchartColorLabel}}<span class="kintoneplugin-require">*</span></div>
+            <div class="kintoneplugin-label">{{html:terms.ganttchartColorLabel}}</div>
             <div class="kintoneplugin-select-outer">
                 <div class="kintoneplugin-select">
                     <select id="ganttchart-plugin-color">
